fixed close btn and scrollbar

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -50,22 +50,22 @@ body.active-modal {
   animation-duration: 300ms;
   animation-timing-function: ease-in-out;
 
-  // -ms-overflow-style: none;
-  // scrollbar-width: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 
   & * {
     padding: 4px 0px;
   }
 
-  // &::-webkit-scrollbar {
-  //   display: none;
-  // }
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .close_modal {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+  // position: absolute;
+  // top: 10px;
+  // right: 10px;
   padding: 5px 7px;
   height: 30px;
 }
